--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "react-copy-to-clipboard": "^5.1.0",
     "react-country-flag": "^3.0.2",
     "react-country-region-selector": "^3.6.1",
+    "react-cropper": "^2.1.8",
     "react-data-table-component": "^7.5.2",
     "react-dom": "^18.1.0",
     "react-draft-wysiwyg": "^1.14.7",
