--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@hookform/resolvers": "^2.8.10",
     "@popperjs/core": "^2.11.3",
     "@reduxjs/toolkit": "^1.2.5",
+    "@stripe/react-stripe-js": "^1.12.0",
+    "@stripe/stripe-js": "^1.38.1",
     "animate.css": "4.1.1",
     "apexcharts": "^3.35.2",
     "apexcharts-clevision": "^3.28.5",
