--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "react-shepherd": "3.3.6",
     "react-slidedown": "^2.4.7",
     "react-sortablejs": "6.0.0",
+    "react-timezone-select": "^1.3.2",
     "reactstrap": "9.0.1",
     "recharts": "^2.1.9",
     "redux": "^4.2.0",
