--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "dependencies": {
     "@casl/ability": "^5.4.3",
     "@casl/react": "^2.3.0",
-    "@craco/craco": "^6.4.3",
+    "@craco/craco": "^7.0.0",
     "@fortawesome/fontawesome-svg-core": "^6.2.0",
     "@fortawesome/free-solid-svg-icons": "^6.2.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
@@ -17,6 +17,7 @@
     "@fullcalendar/timegrid": "^5.11.0",
     "@fullcalendar/timeline": "^5.11.0",
     "@hookform/resolvers": "^2.8.10",
+    "@material-ui/icons": "^4.11.3",
     "@popperjs/core": "^2.11.3",
     "@reduxjs/toolkit": "^1.2.5",
     "@stripe/react-stripe-js": "^1.12.0",
@@ -27,6 +28,7 @@
     "axios": "^0.27.2",
     "axios-mock-adapter": "^1.20.0",
     "bootstrap": "5.1.0",
+    "bootstrap-icons": "^1.10.2",
     "bs-stepper": "1.7.0",
     "chart.js": "^3.7.1",
     "classnames": "2.3.1",
@@ -46,7 +48,7 @@
     "moment": "^2.29.3",
     "nouislider": "^15.5.0",
     "nouislider-react": "^3.4.1",
-    "postcss-rtl": "^1.5.0",
+    "postcss-rtl": "^0.0.3",
     "prismjs": "^1.28.0",
     "prop-types": "^15.8.1",
     "rc-input-number": "^7.3.4",
@@ -67,21 +69,23 @@
     "react-hook-form": "^7.31.1",
     "react-hot-toast": "2.2.0",
     "react-i18next": "^11.16.9",
+    "react-icons": "^4.6.0",
     "react-loading-skeleton": "^3.1.0",
+    "react-media-recorder": "^1.6.6",
     "react-paginate": "^8.1.3",
     "react-perfect-scrollbar": "^1.5.8",
     "react-player": "^2.10.1",
     "react-rating": "2.0.5",
     "react-redux": "^8.0.1",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "4.0.2",
+    "react-scripts": "^5.0.1",
     "react-select": "^5.3.2",
     "react-shepherd": "3.3.6",
     "react-slidedown": "^2.4.7",
     "react-sortablejs": "6.0.0",
     "react-timezone-select": "^1.3.2",
     "reactstrap": "9.0.1",
-    "recharts": "^2.1.9",
+    "recharts": "^0.22.5",
     "redux": "^4.2.0",
     "redux-debounced": "0.5.0",
     "redux-thunk": "^2.4.1",
