--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "i18next-xhr-backend": "3.2.2",
     "jquery": "^3.6.0",
     "jsonwebtoken": "8.5.1",
+    "lodash": "^4.17.21",
     "moment": "^2.29.3",
     "nouislider": "^15.5.0",
     "nouislider-react": "^3.4.1",
