--- a/package.json
+++ b/package.json
@@ -84,6 +84,8 @@
     "react-shepherd": "3.3.6",
     "react-slidedown": "^2.4.7",
     "react-sortablejs": "6.0.0",
+    "react-tag-input": "^6.8.1",
+    "react-tag-input-component": "^2.0.2",
     "react-timezone-select": "^1.3.2",
     "reactstrap": "9.0.1",
     "recharts": "^0.22.5",
