--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "rc-input-number": "^7.3.4",
     "react": "^18.1.0",
     "react-apexcharts": "^1.4.0",
+    "react-audio-player": "^0.17.0",
     "react-chartjs-2": "^4.1.0",
     "react-contexify": "5.0.0",
     "react-copy-to-clipboard": "^5.1.0",
@@ -75,6 +76,7 @@
     "react-media-recorder": "^1.6.6",
     "react-paginate": "^8.1.3",
     "react-perfect-scrollbar": "^1.5.8",
+    "react-phone-number-input": "^3.2.12",
     "react-player": "^2.10.1",
     "react-rating": "2.0.5",
     "react-redux": "^8.0.1",
