--- a/package.json
+++ b/package.json
@@ -76,7 +76,7 @@
     "react-media-recorder": "^1.6.6",
     "react-paginate": "^8.1.3",
     "react-perfect-scrollbar": "^1.5.8",
-    "react-phone-number-input": "^3.2.12",
+    "react-phone-input-2": "^2.15.1",
     "react-player": "^2.10.1",
     "react-rating": "2.0.5",
     "react-redux": "^8.0.1",
