--- a/package.json
+++ b/package.json
@@ -106,7 +106,7 @@
   },
   "scripts": {
     "start": "craco start",
-    "build": "NODE_ENV='production' craco build",
+    "build": "craco build",
     "test": "craco test",
     "eject": "react-scripts eject",
     "format": "prettier --write \"src/**/*.js\"",
