--- a/package.json
+++ b/package.json
@@ -67,11 +67,12 @@
     "react-draft-wysiwyg": "^1.14.7",
     "react-dropzone": "^14.2.1",
     "react-feather": "~2.0.3",
-    "react-flatpickr": "^3.10.12",   
+    "react-flatpickr": "^3.10.12",
     "react-hook-form": "^7.31.1",
     "react-hot-toast": "2.2.0",
     "react-i18next": "^11.16.9",
     "react-icons": "^4.6.0",
+    "react-js-pagination": "^3.0.3",
     "react-loading-skeleton": "^3.1.0",
     "react-media-recorder": "^1.6.6",
     "react-paginate": "^8.1.3",
