--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "react-hot-toast": "2.2.0",
     "react-i18next": "^11.16.9",
     "react-icons": "^4.6.0",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-loading-skeleton": "^3.1.0",
     "react-media-recorder": "^1.6.6",
     "react-paginate": "^8.1.3",
