--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "apexcharts-clevision": "^3.28.5",
     "axios": "^0.27.2",
     "axios-mock-adapter": "^1.20.0",
-    "bootstrap": "5.2.3",
+    "bootstrap": "^5.2.3",
     "bootstrap-icons": "^1.10.2",
     "bs-stepper": "1.7.0",
     "chart.js": "^3.7.1",
@@ -72,8 +72,6 @@
     "react-hot-toast": "2.2.0",
     "react-i18next": "^11.16.9",
     "react-icons": "^4.6.0",
-    "react-js-pagination": "^3.0.3",
-    "react-infinite-scroll-component": "^6.1.0",
     "react-loading-skeleton": "^3.1.0",
     "react-media-recorder": "^1.6.6",
     "react-paginate": "^8.1.3",
@@ -143,13 +141,11 @@
   },
   "resolutions": {
     "react-error-overlay": "6.0.9",
-    "postcss-custom-properties": "10.0.0",
-    "autoprefixer": "10.4.5"
+    "postcss-custom-properties": "10.0.0"
   },
   "overrides": {
     "react-error-overlay": "6.0.9",
-    "postcss-custom-properties": "10.0.0",
-    "autoprefixer": "10.4.5"
+    "postcss-custom-properties": "10.0.0"
   },
   "homepage": ""
 }
