--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "react-apexcharts": "^1.4.0",
     "react-audio-player": "^0.17.0",
     "react-chartjs-2": "^4.1.0",
+    "react-color": "^2.19.3",
     "react-contexify": "5.0.0",
     "react-copy-to-clipboard": "^5.1.0",
     "react-country-flag": "^3.0.2",
@@ -72,8 +73,8 @@
     "react-hot-toast": "2.2.0",
     "react-i18next": "^11.16.9",
     "react-icons": "^4.6.0",
-    "react-js-pagination": "^3.0.3",
     "react-infinite-scroll-component": "^6.1.0",
+    "react-js-pagination": "^3.0.3",
     "react-loading-skeleton": "^3.1.0",
     "react-media-recorder": "^1.6.6",
     "react-paginate": "^8.1.3",
