--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "postcss-rtl": "^0.0.3",
     "prismjs": "^1.28.0",
     "prop-types": "^15.8.1",
+    "pusher": "^5.1.2",
     "rc-input-number": "^7.3.4",
     "react": "^18.1.0",
     "react-apexcharts": "^1.4.0",
@@ -72,8 +73,8 @@
     "react-hot-toast": "2.2.0",
     "react-i18next": "^11.16.9",
     "react-icons": "^4.6.0",
-    "react-js-pagination": "^3.0.3",
     "react-infinite-scroll-component": "^6.1.0",
+    "react-js-pagination": "^3.0.3",
     "react-loading-skeleton": "^3.1.0",
     "react-media-recorder": "^1.6.6",
     "react-paginate": "^8.1.3",
@@ -101,6 +102,7 @@
     "sweetalert2": "^11.4.14",
     "sweetalert2-react-content": "^5.0.0",
     "swiper": "^8.1.5",
+    "universal-cookie": "^4.0.4",
     "wnumb": "1.2.0",
     "xlsx": "^0.18.5",
     "yarn": "^1.22.18",
@@ -126,7 +128,9 @@
     "eslint": "^8.19.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-react": "^7.29.4",
+    "laravel-echo": "^1.14.2",
     "prettier": "^2.6.2",
+    "pusher-js": "^8.0.0",
     "sass-loader": "^12.6.0"
   },
   "browserslist": {
