--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
     "react-select": "^5.6.1",
+    "react-sortablejs": "^6.1.4",
     "react-timezone-select": "^1.3.2",
     "reactstrap": "9.0.1",
     "recharts": "^2.3.2",
