--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "react-country-region-selector": "^3.6.1",
     "react-cropper": "^2.1.8",
     "react-data-table-component": "^7.5.2",
+    "react-datepicker": "^4.10.0",
     "react-dom": "^18.1.0",
     "react-draft-wysiwyg": "^1.14.7",
     "react-dropzone": "^14.2.1",
