--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "jsonwebtoken": "8.5.1",
     "lodash": "^4.17.21",
     "moment": "^2.29.3",
+    "moment-timezone": "^0.5.43",
     "nouislider": "^15.5.0",
     "nouislider-react": "^3.4.1",
     "postcss-rtl": "^0.0.3",
