--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "react-draft-wysiwyg": "^1.14.7",
     "react-dropzone": "^14.2.1",
     "react-feather": "~2.0.3",
+    "react-flags-select": "^2.2.3",
     "react-flatpickr": "^3.10.12",
     "react-hook-form": "^7.31.1",
     "react-hot-toast": "2.2.0",
